perf(menu) + Java 8 conformance: PWA0/PWA3/PWA5, BRIDGE1 coalescing
Client (plugin-only, no SageTV server changes):
- PWA0: gated perf-monitor (?perf=1 / localStorage / __SAGETV_PERF__) with
  per-frame timing, command/draw counts, cache usage, input->present latency;
  silence per-frame + hot per-command console spam when disabled.
- PWA3 (safe subset): fix image-cache accounting leak — surfaces added to the
  pixel budget in createSurface were never subtracted in unloadImage, so the
  cache reported full prematurely and every poster round-tripped from the
  server (the multi-second per-row menu lag). Unilateral eviction stays out:
  it is protocol-unsafe without a matching server change.
- PWA5: platform-aware imageSmoothingQuality (low on iOS/Tizen, high on
  desktop/Android), overridable via renderer option.

Bridge (Java, plugin jar — not Sage.jar):
- BRIDGE1: coalesce TCP->WS frames in BridgeWebSocket during GFX bursts,
  flush on drain or WS_COALESCE_MAX_BYTES; byte order/payload preserved,
  blocking sendBytes provides backpressure. Tunable/disable via env / -D.

Java 8 / OpenSageTV plugin-repo conformance:
- Manifest JVM MinVersion 11 -> 1.8 (both XMLs) to match the repo and install
  on stock Java 8 V9 servers.
- Replace Set.of(...) (Java 9) in ServerInfoServlet with Arrays.asList form.
- build.gradle: options.release = 8 rejects Java 9+ APIs at compile time;
  this caught and fixed a second slip, Process.pid() in TranscodeManager.
- Verified: shadow jar bytecode major version 52 (Java 8).

ROADMAP: document done / recommended / not-recommended / outstanding menu-perf
items and the Java 8 conformance work.